objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <formula>If(OR(ispickval(LeadSource,"Blog / Newsletter"),
ispickval(LeadSource,"R1 Website"),
ispickval(LeadSource,"Campaign Landing Page"),
ispickval(LeadSource,"Internet / Organic Search"),
ispickval(LeadSource,"PR / Press Coverage"),
ispickval(LeadSource,"Purchased List"),
ispickval(LeadSource,"Social Media"),
ispickval(LeadSource,"Trade Show / Industry / Customer Event"),
ispickval(LeadSource,"Other")),"M","S")</formula>
        <label>Lead Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_for_Conversion__c</fullName>
        <formula>text(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status for Conversion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_owner_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field created so the "Rejected &amp; Incorrect Assignment" process builder's email alert can be directed to this user. Email requires user lookup, which is populated via a Process Builder whenever Lead Owner is a user.</inlineHelpText>
        <label>Lead Owner's Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linkedin_URL__c</fullName>
        <label>Linkedin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Task_Debunk__c</fullName>
        <description>Used by Sys Admin to test the MQL Flow that based on New Task created with Subject "Marketing Qualified Lead". Based on Lead explicit field criteria  for each row in the excel doc Lead Assignment and/or Email Alerts get sent. Row 8 only updates this field</description>
        <inlineHelpText>Used by Sys Admin to test the MQL Flow that based on New Task created with Subject "Marketing Qualified Lead". Based on Lead explicit field criteria  for each row in the excel doc Lead Assignment and/or Email Alerts get sent. Row 8 only updates this field</inlineHelpText>
        <label>MQL Task Debunk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQLorSCR__c</fullName>
        <description>If both MQL and SCR dates are blank, then leave this flag blank.</description>
        <formula>IF(AND(ISBLANK(MQL_Date__c),ISBLANK(SCR_Date__c)),FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQLorSCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_qualified_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox enriched only from Hubspot when a lead is determined to be a MQL. Not viewable nor editible by anyone but admins. Process builder works from this field that will promote Suspect Lead(s) to Qualified Lead Record type if true/checked. Then that lead is assigned if the owner is not marketing.</description>
        <label>Marketing qualified lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Patient_Revenue__c</fullName>
        <inlineHelpText>Typically this is self proclaimed NPR.</inlineHelpText>
        <label>Net Patient Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $100 million</fullName>
                </value>
                <value>
                    <fullName>$100 million to $200 million</fullName>
                </value>
                <value>
                    <fullName>$201 million to $300 million</fullName>
                </value>
                <value>
                    <fullName>$301 million to $500 million</fullName>
                </value>
                <value>
                    <fullName>$501 million to $999 million</fullName>
                </value>
                <value>
                    <fullName>$1 billion to $3 billion</fullName>
                </value>
                <value>
                    <fullName>Greater than $3 billion</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Sales_Calls_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fed by Hubspot</description>
        <label># Sales Calls Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employed_Physicians__c</fullName>
        <label>No. of Employed Physicians</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 50</fullName>
                </value>
                <value>
                    <fullName>51 - 100</fullName>
                </value>
                <value>
                    <fullName>101 - 150</fullName>
                </value>
                <value>
                    <fullName>More than 150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Providers__c</fullName>
        <label>No. of Providers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5</fullName>
                </value>
                <value>
                    <fullName>5 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 15</fullName>
                </value>
                <value>
                    <fullName>16 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 100</fullName>
                </value>
                <value>
                    <fullName>101 - 500</fullName>
                </value>
                <value>
                    <fullName>More than 500</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                    <isActive>false</isActive>
                    <label>1-2</label>
                </value>
                <value>
                    <fullName>1-5</fullName>
                    <isActive>false</isActive>
                    <label>1-5</label>
                </value>
                <value>
                    <fullName>10+</fullName>
                    <isActive>false</isActive>
                    <label>10+</label>
                </value>
                <value>
                    <fullName>100+</fullName>
                    <isActive>false</isActive>
                    <label>100+</label>
                </value>
                <value>
                    <fullName>15+</fullName>
                    <isActive>false</isActive>
                    <label>15+</label>
                </value>
                <value>
                    <fullName>25+</fullName>
                    <isActive>false</isActive>
                    <label>25+</label>
                </value>
                <value>
                    <fullName>5-6</fullName>
                    <isActive>false</isActive>
                    <label>5-6</label>
                </value>
                <value>
                    <fullName>50+</fullName>
                    <isActive>false</isActive>
                    <label>50+</label>
                </value>
                <value>
                    <fullName>500+</fullName>
                    <isActive>false</isActive>
                    <label>500+</label>
                </value>
                <value>
                    <fullName>6-10</fullName>
                    <isActive>false</isActive>
                    <label>6-10</label>
                </value>
                <value>
                    <fullName>7-8</fullName>
                    <isActive>false</isActive>
                    <label>7-8</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <inlineHelpText>Primarily a self proclaimed bucket of company types that help marketing segment the database for communications.</inlineHelpText>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACO (Accountable Care Organization)</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business / Corporation</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Fire / EMS Agency</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Hospice / Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Hospital / Health System</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Management Services Organization (MSO)</fullName>
                </value>
                <value>
                    <fullName>Medical Practice</fullName>
                </value>
                <value>
                    <fullName>Medical Provider</fullName>
                </value>
                <value>
                    <fullName>Non-Profit / Association</fullName>
                </value>
                <value>
                    <fullName>Physician Group</fullName>
                </value>
                <value>
                    <fullName>Press / Analyst</fullName>
                </value>
                <value>
                    <fullName>R1 Business Partner / Vendor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TeleHealth Provider</fullName>
                </value>
                <value>
                    <fullName>TPA (Third Party Administrator)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <inlineHelpText>Indicates the outcome of the prospect and further define the status condition.</inlineHelpText>
        <label>Outcome Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Contact</fullName>
                    <default>true</default>
                    <label>Awaiting Contact</label>
                </value>
                <value>
                    <fullName>First Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Second Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Third Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Fourth Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduling in Progress</fullName>
                </value>
                <value>
                    <fullName>Return to Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Budget</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Need</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Timing</fullName>
                </value>
                <value>
                    <fullName>Incorrect Assignment</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Non-Provider</fullName>
                </value>
                <value>
                    <fullName>Sales Appointment Confirmed</fullName>
                </value>
                <value>
                    <fullName>Call Requested by Prospect</fullName>
                </value>
                <value>
                    <fullName>Sales Nurturing</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Size</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <isActive>false</isActive>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                    <isActive>false</isActive>
                    <label>Prospecting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POI_for_Opp_Conversion__c</fullName>
        <label>POI for Opp Conversion</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Lookup_helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account LOOKUP HELPER</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads using Parent Account LOOKUP HELPER</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads Related</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>Parent_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Group_Ownership__c</fullName>
        <label>Physician Group Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Management Group</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (For-Profit Institution)</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (Government Institution)</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (Not-for-Profit Institution)</fullName>
                </value>
                <value>
                    <fullName>Provider Owned (Single)</fullName>
                </value>
                <value>
                    <fullName>Provider Owned (Group)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Specialties__c</fullName>
        <label>Practice Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Geriatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases</fullName>
                </value>
                <value>
                    <fullName>Internal/Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Medical Oncology</fullName>
                </value>
                <value>
                    <fullName>Multi-Specialty</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Obstetrics/Gynecology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>Pediatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred First Name/ Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest_POI__c</fullName>
        <description>This is the akin to the Opportunity's third tier in the 4 layer logic: Vertical, Target, Solution, Services. This POI field gets mapped to the Opportunity's "POI for Opp Conversion" field. And mapped to the Contact.</description>
        <inlineHelpText>Product(s) of Interest. Either assumed based on activity or self proclaimed initially. Sales can and will modify throughout the funnel stages.</inlineHelpText>
        <label>Product(s) of Interest (POI)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IDN-RCM-Full Operating</fullName>
                </value>
                <value>
                    <fullName>IDN-RCM-CoManaged</fullName>
                </value>
                <value>
                    <fullName>IDN-Patient Access</fullName>
                </value>
                <value>
                    <fullName>IDN-Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>IDN-Physician Advisory</fullName>
                </value>
                <value>
                    <fullName>IDN-Coding Management</fullName>
                </value>
                <value>
                    <fullName>IDN-Business Office</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-RCM</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-PM</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-RCM</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-PM</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-Coding</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-RCM</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-PM</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-Coding</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-RCM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-PM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-Coding</fullName>
                </value>
                <value>
                    <fullName>EMS-RCM</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Live</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Predict</fullName>
                </value>
                <value>
                    <fullName>EMS-TripTix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Lead_End_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead")</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead")</inlineHelpText>
        <label>Qualified Lead End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualified_Lead_Start_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead")</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead")</inlineHelpText>
        <label>Qualified Lead Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCM_Solution__c</fullName>
        <label>RCM Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Hospital Network</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RunLeadAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RunLeadAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCR_Date__c</fullName>
        <label>SCR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Accepted_Lead_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); since SAL is not a Funnel Stage we are only recording date the LO clicked "Accepted" button; this field will be used to calculate velocity between dates tied to earlier and subsequent funnel stages, e.g. how many days did Lead exist until it became accepted?</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); since SAL is not a Funnel Stage we are only recording date the LO clicked "Accepted" button; this field will be used to calculate how many days did Lead exist until it became accepted?</inlineHelpText>
        <label>Sales Accepted Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Call Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Qualified_Lead_End_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value. This end date will be populated when Lead is converted.</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value. This end date will be populated when Lead is converted.</inlineHelpText>
        <label>Sales Qualified Lead End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Qualified_Lead_Start_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value</inlineHelpText>
        <label>Sales Qualified Lead Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <label>Solution Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Interest__c</fullName>
        <label>zzzSolution Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Modular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A valid State/Province forces population of this linkage field for access to all State/Province related data fields</description>
        <label>State/Province</label>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuperRegion__c</fullName>
        <formula>ISO_3166_Country__r.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SuperRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suspect_Lead_End_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead" to account for fact that users can manually create Leads and not have to start at FS "Suspect Lead"</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead" to account for fact that users can manually create Leads and not have to start at FS "Suspect Lead"</inlineHelpText>
        <label>Suspect Lead End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspect_Lead_Start_Date__c</fullName>
        <description>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead" to account for fact that users can manually create Leads and not have to start at FS "Suspect Lead"</description>
        <inlineHelpText>Used to measure Lead Velocity (ie days in each Funnel Stage); using start &amp; end dates for each Funnel Stage picklist value (and for "Sales Accepted Lead" to account for fact that users can manually create Leads and not have to start at FS "Suspect Lead"</inlineHelpText>
        <label>Suspect Lead Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lead created by yourself as a salesperson to help you target specific opportunities. A key account you are targeting.</inlineHelpText>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.SalesTeam__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TerritoryOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Priorities__c</fullName>
        <description>Collected by Marketing on a Form. Top Priorities Selected by the Prospect.</description>
        <inlineHelpText>Prospects top Priorities in next 12-18 months. Self selected on forms.</inlineHelpText>
        <label>Top Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improving the patient experience</fullName>
                </value>
                <value>
                    <fullName>Providing pre-service estimates of patient costs</fullName>
                </value>
                <value>
                    <fullName>Providing financial options to patients</fullName>
                </value>
                <value>
                    <fullName>Deploying automation to the revenue cycle process</fullName>
                </value>
                <value>
                    <fullName>Integrating acute and physician revenue cycles to align with value-based care</fullName>
                </value>
                <value>
                    <fullName>Improving revenue integrity</fullName>
                </value>
                <value>
                    <fullName>Reducing denial rates</fullName>
                </value>
                <value>
                    <fullName>Improving payments and patient experience</fullName>
                </value>
                <value>
                    <fullName>Integrating acute and physician revenue cycles</fullName>
                </value>
                <value>
                    <fullName>Deploying automation to reduce the cost of business operations</fullName>
                </value>
                <value>
                    <fullName>Reducing denial rates and improving revenue integrity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>